moved all code from all pages to one masterSite to fit SPA requirements

--- a/createPHAccount.html
+++ b/createPHAccount.html
@@ -30,7 +30,7 @@
 
 <!-- Add account form -->
 <section class = "container mt-5">
-    <h2 class="text-center">Add a new account</h2>
+    <h2 class="text-center">Create your account with us!</h2>
     <form>
         <div class="mb-3">
             <label for="accountEmail" class="form-label">Account email</label>
