--- a/onePage.html
+++ b/onePage.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* hiding all sections by default */
+        /*hiding all sections by default*/
         .section { display: none; }
         .active { display: block; }
     </style>
@@ -42,33 +42,50 @@
 
 <!-- View accounts section-->
 <section id="viewAccounts" class = "section container mt-5">
-    <h2 class="text-center">Your Stored Accounts</h2>
+    <h2 class="text-center mb-4">Your Stored Accounts</h2>
+    <!-- headers for the table-->
+    <div class = "row text-center fw bold border-bottom pb-2">
+        <div class = "col-4">Accounts</div>
+        <div class = "col-4">Date Added</div>
+        <div class = "col-4">Credentials</div>
+    </div>
     <!-- accounts list vertical-->
     <div class="row">
         <div class="col-12 mb-3">
-            <div class="d-flex justify-content-between align-items-center border rounded p-3">
-                <span class="fw-bold">Instagram</span>
-                <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+            <div class="row align-items-center">
+                <div class="col-4 fw bold">Instagram</div>
+                <div class="col-4 text-center">01-07-2024</div>
+                <div class="col-4 text-center">
+                    <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                </div>
             </div>
         </div>
 
-        <div class="col-12 mb-3">
-            <div class="d-flex justify-content-between align-items-center border rounded p-3">
-                <span class="fw-bold">LinkedIn</span>
-                <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+        <div class="row">
+            <div class="col-12 mb-3">
+                <div class="row align-items-center">
+                    <div class="col-4 fw bold">LinkedIn</div>
+                    <div class="col-4 text-center">03-17-2022</div>
+                    <div class="col-4 text-center">
+                        <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <div class="col-12 mb-3">
-            <div class="d-flex justify-content-between align-items-center border rounded p-3">
-                <span class="fw-bold">GitHub</span>
-                <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
-            </div>
-        </div>
-    </div>
+            <div class="row">
+                <div class="col-12 mb-3">
+                    <div class="row align-items-center">
+                        <div class="col-4 fw bold">GitHub</div>
+                        <div class="col-4 text-center">11-27-2024</div>
+                        <div class="col-4 text-center">
+                            <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                        </div>
+                    </div>
+                </div>
 </section>
+
 <!-- create passwordHaven account section-->
-<section id= "createPHAccount" class = "container mt-5">
+<section id= "createPHAccount" class = "section container mt-5">
     <h2 class="text-center">Add a new account</h2>
     <form>
         <div class="mb-3">
@@ -83,4 +100,141 @@
         <p id="saveAccount"></p>
     </form>
 </section>
+
+<!-- login form -->
+<section id = "login" class = "section container mt-5">
+    <h2 class="text-center">Log into PasswordHaven</h2>
+    <form>
+        <div class="mb-3">
+            <label for="accountEmail" class="form-label">Account email</label>
+            <input type="email" class="form-control" id="accountEmail" placeholder="Enter your email address:"></input>
+        </div>
+        <div class="mb-3">
+            <label for="accountPassword" class="form-label">Account password</label>
+            <input type="password" class="form-control" id="accountPassword" placeholder="Enter your password:"></input>
+        </div>
+        <button onclick="whenLogin()"> Login</button>
+        <p id="saveAccount"></p>
+    </form>
+</section>
+
+
+<!-- function to show the relevant section when needed, so all sections don't get displayed automatically-->
+<script>
+    function showSection(sectionId){
+        //hiding all the sections
+        document.querySelectorAll('.section').for(section =>{
+            section.classList.remove('active');
+        })
+
+        //then showing the selected section
+        selectedSection = document.getElementById(sectionId);
+        if(selectedSection){
+            selectedSection.classList.add('active');
+        }else {
+            console.error("Couldn't find section:", selectedSection);
+        }
+    }
+
+    class User {
+        constructor(username, email, password) {
+            this.email = email;
+            this.password = this.encryptPassword(); // Store hashed password
+        }
+
+        encryptPassword(password) {
+            return btoa(password); // Simple Base64 encoding (Use a better hash in production)
+        }
+
+        static saveUser(email, password) {
+            if (localStorage.getItem("user")) {
+                alert("An account already exists. Please login!")
+                return false;
+            }
+
+            let newUser = new User(email, password); //initiating an instance of the user
+            localStorage.setItem("user", JSON.stringify(newUser));// adding the user to local storage
+            return true;
+        }
+
+        //retrieving the user's details from local storage
+        static getUser() {
+            let userInfo = localStorage.getItem("user");
+            return userInfo ? JSON.parse(userInfo) : null;
+        }
+
+        register() {
+            console.log(`User Registered: ${this.username}`);
+        }
+
+        static login(email, inputPassword) {
+            let storedUser = User.getUser();
+            if(!storedUser){
+                return false;
+        }
+            return storedUser.email === email && storedUser.password === btoa(password);
+    }
+
+    class Account{
+        constructor(siteName, url, username, password) {
+            this.siteName = siteName;
+            this.url = url;
+            this.username = username;
+            this.password = this.encryptPassword(password);
+        }
+
+        encryptPassword(password) {
+            return btoa(password); // Encrypt password (for simplicity, replace with real encryption)
+        }
+
+        decryptPassword() {
+            return atob(this.password);
+        }
+    }
+
+    class PasswordManager {
+        constructor() {
+            this.accounts = [];
+        }
+
+        addAccount(account) {
+            this.accounts.push(account);
+            console.log(`Added: ${account.siteName}`);
+        }
+
+        viewAccounts() {
+            return this.accounts;
+        }
+    }
+
+    class PasswordStrengthValidator {
+        static checkStrength(password) {
+            const strongRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$/;
+            return strongRegex.test(password) ? "Strong" : "Weak";
+        }
+    }
+
+    class PasswordGenerator {
+        static generate() {
+            const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()";
+            let password = "";
+            for (let i = 0; i < 12; i++) {
+                password += chars.charAt(Math.floor(Math.random() * chars.length));
+            }
+            return password;
+        }
+    }
+
+    // Testing: Creating a User & Adding an Account
+    let user = new User("testUser", "test@example.com", "securePass123!");
+    user.register();
+
+    let pm = new PasswordManager();
+    let newAccount = new Account("GitHub", "https://github.com", "testUser", "superSecurePass!");
+    pm.addAccount(newAccount);
+
+    console.log("Stored Accounts:", pm.viewAccounts());
+    }
+</script>
 </body>
+</html>
