--- a/viewAccounts.html
+++ b/viewAccounts.html
@@ -26,34 +26,50 @@
     </div>
 </nav>
 
-<!-- View accounts -->
-<section class = "container mt-5">
-    <h2 class="text-center">Your Stored Accounts</h2>
+<!-- View accounts section-->
+<section id="viewAccounts" class = "section container mt-5">
+    <h2 class="text-center mb-4">Your Stored Accounts</h2>
+    <!-- headers for the table-->
+    <div class = "row text-center fw bold border-bottom pb-2">
+        <div class = "col-4">Accounts</div>
+        <div class = "col-4">Date Added</div>
+        <div class = "col-4">Credentials</div>
+    </div>
     <!-- accounts list vertical-->
     <div class="row">
         <div class="col-12 mb-3">
-            <div class="d-flex justify-content-between align-items-center border rounded p-3">
-                <span class="fw-bold">Instagram</span>
-                <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+            <div class="row align-items-center">
+                <div class="col-4 fw bold">Instagram</div>
+                <div class="col-4 text-center">01-07-2024</div>
+                <div class="col-4 text-center">
+                    <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                </div>
             </div>
         </div>
 
-        <div class="col-12 mb-3">
-            <div class="d-flex justify-content-between align-items-center border rounded p-3">
-                <span class="fw-bold">LinkedIn</span>
-                <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+        <div class="row">
+            <div class="col-12 mb-3">
+                <div class="row align-items-center">
+                    <div class="col-4 fw bold">LinkedIn</div>
+                    <div class="col-4 text-center">03-17-2022</div>
+                    <div class="col-4 text-center">
+                        <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <div class="col-12 mb-3">
-            <div class="d-flex justify-content-between align-items-center border rounded p-3">
-                <span class="fw-bold">GitHub</span>
-                <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+            <div class="row">
+                <div class="col-12 mb-3">
+                    <div class="row align-items-center">
+                        <div class="col-4 fw bold">GitHub</div>
+                        <div class="col-4 text-center">11-27-2024</div>
+                        <div class="col-4 text-center">
+                            <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 </section>
-
 <!--standard Footer -->
 <footer class="bg-dark text-white text-center py-3">
     <p class ="mb-0">&copy; 2025 PasswordHaven</p>
