--- a/site.html
+++ b/site.html
@@ -3,46 +3,196 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PasswordHaven - Password Manager</title>
+    <title>PasswordHaven - Single Page Application</title>
+
+    <!-- linking js code file -->
+    <script src ="script.js"></script>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /*hiding all sections by default*/
+        .section { display: none; }
+        .active { display: block; }
+    </style>
 </head>
-<body style="margin: 0; padding: 0;">
+<body>
+
 <!-- Navigation bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-0">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="site.html">PasswordHaven</a>
+        <a class="navbar-brand" href="#" onclick="showSection('home')">PasswordHaven</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="viewAccounts.html">View Accounts</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Your Account</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" onclick="showSection('home')">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" onclick="checkLoginBeforeViewAccounts()">View Accounts</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" onclick="checkLoginBeforeViewAccounts()">Add Account</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
 <!-- center section text-->
-<section class="middle text-center text-white align-items-center mt-3" style="background: #4A90E2; padding-top: 5rem;">
+<section id="home" class="section active text-center text-white align-items-center mt-3" style="background: #4A90E2; padding-top: 5rem;">
     <div class="container">
         <h1 class="display-4">Secure Your Passwords with PasswordHaven</h1>
         <p class="lead">The safest and easiest way to manage your passwords and accounts.</p>
-        <a href="createPHAccount.html" class="btn btn-light btn-lg mt-3">Create PasswordHaven account</a>
-        <a href="login.html" class="btn btn-light btn-lg mt-3">Login</a>
+        <button class="btn btn-light btn-lg mt-3" data-bs-toggle="modal" data-bs-target="#createPHAccountModal">Create Account</button>
+        <button class="btn btn-light btn-lg mt-3" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+    </div> <!-- TODO add a list of small succint bullet points on why users should passwordHaven -->
+</section>
+
+<!-- create passwordHaven account modal pop up-->
+<div class="modal fade" id="createPHAccountModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createPHAccountModalLabel">Create PasswordHaven account</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label>Email:</label>
+                <input type="email" id="signUpEmail" class="form-control">
+                <label>Password:</label>
+                <input type="password" id="signUpPassword" class="form-control">
+                <p id="signUpMsg" class="mt-2 text-danger"></p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" onclick="User.handleSignUp()"> Create PasswordHaven Account</button>
+                <button class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#generatePasswordModal" onclick="PasswordGenerator.generatePassword()">Generate Password</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- add an account form modal section -->
+<section id="addAccountModal" class = "section container mt-3">
+    <h2 class = "text-center mb-4">New account form</h2>
+    <p class="lead text-center mb-5">Please fill all the forms below to add your account .</p>
+    <div class = "container mt-3">
+        <label>Website URL:</label>
+        <input type="url" id="enteredWebsite" class="form-control">
+        <label>Email/username:</label>
+        <input type="username" id="enteredUsername" class="form-control">
+        <label>Password:</label>
+        <input type="password" id="enteredPassword" class="form-control">
+        <label>Confirm Password:</label>
+        <input type="password" id="confirmPassword" class="form-control">
+        <label>Date of account creation:</label>
+        <input type="date" id="enteredDate" class="form-control">
+        <p id="accountAddMsg" class="mt-2 text-danger"></p>
+    </div>
+    <div class = "modal-footer">
+        <button class="btn btn-primary" onclick="PasswordManager.addAccount()">Add account</button>
+    </div> <!-- TODO change this section to mimic home page section without blue background and have button for add account modal!-->
+</section>
+
+<!-- account adding description section -->
+<section id="accountAdd" class="section active text-center text-black align-items-center mt-3" style="background: #4290e3; padding-top: 5rem;">
+    <div class="container">
+        <h3 class="display-4">Add a saved login.</h3>
+        <p class="lead">Save your account credentials for <strong> quick and secure </strong> access, by <mark> clicking the button below to add a new login account </mark> into PasswordHaven.</p>
+        <button class="btn btn-light btn-lg mt-3" data-bs-toggle="modal" data-bs-target="#addAccountModal">Add your account!</button>
     </div>
 </section>
 
-<!-- Footer -->
-<footer class="footer bg-dark text-white text-center py-3">
-    <p class="mb-0">&copy; 2025 PasswordHaven</p>
+<!-- generate password modal -->
+<div class="modal fade" id="generatePasswordModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class ="modal-title" id="generatePasswordModalLabel">Generated Password</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label>Here is your randomly generated password. Please copy it:</label>
+                <p id="generatedPassword" class = "mt-2 text"></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- login form pop up modal-->
+<div class="modal fade" id="loginModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loginModalLabel">Login to PasswordHaven</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <label>Email:</label>
+                <input type="email" id="loginEmail" class="form-control">
+                <label>Password:</label>
+                <input type="password" id="loginPassword" class="form-control">
+                <p id="loginMsg" class="mt-2 text-danger"></p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-success" onclick="User.handleLogin()">Login</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- View accounts section-->
+<section id="viewAccounts" class = "section container mt-5">
+    <h2 class="text-center mb-4">Your Stored Accounts</h2>
+    <!-- headers for the table-->
+    <div class = "row text-center fw bold border-bottom pb-2">
+        <div class = "col-4">Accounts</div>
+        <div class = "col-4">Date Added</div>
+        <div class = "col-4">Credentials</div>
+
+    </div>
+    <!-- accounts list vertical-->
+    <div class="row">
+        <div class="col-12 mb-3">
+            <div class="row align-items-center">
+                <div class="col-4 fw bold">Instagram</div>
+                <div class="col-4 text-center">01-07-2024</div>
+                <div class="col-4 text-center">
+                    <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 mb-3">
+            <div class="row align-items-center">
+                <div class="col-4 fw bold">LinkedIn</div>
+                <div class="col-4 text-center">03-17-2022</div>
+                <div class="col-4 text-center">
+                    <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 mb-3">
+            <div class="row align-items-center">
+                <div class="col-4 fw bold">GitHub</div>
+                <div class="col-4 text-center">11-27-2024</div>
+                <div class="col-4 text-center">
+                    <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--standard Footer -->
+<footer class="bg-dark text-white text-center py-3">
+    <p class ="mb-0">&copy; 2025 PasswordHaven</p>
 </footer>
 
-<!-- Bootstrap Bundle JS -->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
